# meta

./: README.md  meson.build  meson_options.txt
python/: meson.build
python/themachinethatgoesping/: in.__init__.py  in.pydev_install.py
